--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+server.compression.enabled=true
 # Datasource
 spring.datasource.url=jdbc:p6spy:h2:mem:testdb
 spring.datasource.username=sa
